Login Page ve Login methodu eklendi 08/08/2022

--- a/configuration.properties
+++ b/configuration.properties
@@ -3,3 +3,6 @@ medunnaUrl=https://www.medunna.com
 
 adminUsername=team59medunna
 adminPassword=medunna2022.team59
+
+staffUsername=StaffMe
+staffPassword=staffme2022
