--- a/configuration.properties
+++ b/configuration.properties
@@ -3,6 +3,6 @@ medunnaUrl=https://www.medunna.com
 
 adminUsername=team59medunna
 adminPassword=medunna2022.team59
-
+us9ssn=123-78-9871
 staffUsername=StaffMe
 staffPassword=staffme2022
