--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,7 @@ adminPassword=medunna2022.team59
 
 staffUsername=StaffMe
 staffPassword=staffme2022
+
+
+drUserName=doctorKibar 
+drPassword=Kocaeli5. 
