--- a/configuration.properties
+++ b/configuration.properties
@@ -3,3 +3,5 @@ medunnaUrl=https://www.medunna.com
 
 adminUsername=team59medunna
 adminPassword=medunna2022.team59
+
+US001_endPoint=https://medunna.com/api/users
