--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,100 @@ adminPassword=medunna2022.team59
 
 staffUsername=StaffMe
 staffPassword=staffme2022
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+doktorKullaniciAdi=dAyse
+doktorKullaniciSifre=s2580456
+baslangicTarihi=10.08.2022
+bitisTarihi=18.08.2022
+doktorNot=sssss
