--- a/configuration.properties
+++ b/configuration.properties
@@ -16,3 +16,31 @@ doktorKullaniciSifre=s2580456
 baslangicTarihi=10.08.2022
 bitisTarihi=18.08.2022
 doktorNot=sssss
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+doktorusarname=merovingian
+doktorpassword=88423654.Nk
