--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,6 @@ adminPassword=medunna2022.team59
 
 staffUsername=StaffMe
 staffPassword=staffme2022
+
+patientUserName=HastaPolat
+patientPassword=2251650a.
