--- a/configuration.properties
+++ b/configuration.properties
@@ -20,31 +20,15 @@ doktorNot=sssss
 patientUserNamed=HastaPolat
 patientPasswordd=2251650a.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 doktorusarname=merovingian
 doktorpassword=88423654.Nk
 patientUserName=HastaPolat
 patientPassword=2251650a.
+
+!-- ******API ENDPOINTS******* -->
+patient_endpoint=https://medunna.com/api/patients
+patient_getEndpoint=https://medunna.com/api/patients?=size=100
+US_009_get_patient_request=https://medunna.com/api/patients/16563
+
+appointment_endpoint=https://medunna.com/api/appointments
+appointment_getEndpoint=https://medunna.com/api/appointments?=size=2000
