--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ target/
 .target/test-classes/features/uiFeatures/firstSprint/US001.feature
 .target/test-classes/runners/TestRunner1.class
 .target/xml-report/cucumber.xml
-.idea/dbnavigator.xml.
+/dbnavigator.xml
