--- a/configuration.properties
+++ b/configuration.properties
@@ -32,3 +32,30 @@ US_009_get_patient_request=https://medunna.com/api/patients/16563
 
 appointment_endpoint=https://medunna.com/api/appointments
 appointment_getEndpoint=https://medunna.com/api/appointments?=size=2000
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+hastausarname=persephone
+hastapassword=88423654.Nk
+contactname=necati
+contactemail=deneme@deneme.com
+contactsubject=Us026denemesi
+message=merhaba/bu/bir/deneme/mesajidir.
