--- a/configuration.properties
+++ b/configuration.properties
@@ -6,8 +6,8 @@ adminPassword=medunna2022.team59
 
 staffUsername=StaffMe
 staffPassword=staffme2022
-
-
+us16Username=admin59
+us16Password=admin
 drUserName=doctorKibar 
 drPassword=Kocaeli5.
 
