--- a/configuration.properties
+++ b/configuration.properties
@@ -33,9 +33,9 @@ US_009_get_patient_request=https://medunna.com/api/patients/16563
 appointment_endpoint=https://medunna.com/api/appointments
 appointment_getEndpoint=https://medunna.com/api/appointments?=size=2000
 
-
-
-
+room_getEndpoint=https://medunna.com/api/rooms/?=size=2000
+room_endpoint=https://medunna.com/api/rooms
+us016_roomgetendpont=https://medunna.com/api/rooms/228125
 
 
 
