--- a/configuration.properties
+++ b/configuration.properties
@@ -37,7 +37,9 @@ room_getEndpoint=https://medunna.com/api/rooms/?=size=2000
 room_endpoint=https://medunna.com/api/rooms
 us016_roomgetendpont=https://medunna.com/api/rooms/228125
 
-
+physician_getEndpoint=https://medunna.com/api/physicians
+physician_getEndpointSize=https://medunna.com/api/physicians?size=2000
+US018_Physician_get_request=https://medunna.com/api/physicians/214524
 
 
 
