--- a/configuration.properties
+++ b/configuration.properties
@@ -34,6 +34,7 @@ appointment_endpoint=https://medunna.com/api/appointments
 appointment_getEndpoint=https://medunna.com/api/appointments?=size=2000
 
 room_getEndpoint=https://medunna.com/api/rooms/?=size=2000
+physian_getEndpoint=https://medunna.com/api/physicians/?=size=2000
 room_endpoint=https://medunna.com/api/rooms
 us016_roomgetendpont=https://medunna.com/api/rooms/228125
 
