--- a/pom.xml
+++ b/pom.xml
@@ -135,8 +135,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.8</version>
         </dependency>
-
-
+        <!--logging.log4j -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>2.8.2</version>
+        </dependency>
 
 
 
