--- a/configuration.properties
+++ b/configuration.properties
@@ -32,3 +32,6 @@ US_009_get_patient_request=https://medunna.com/api/patients/16563
 
 appointment_endpoint=https://medunna.com/api/appointments
 appointment_getEndpoint=https://medunna.com/api/appointments?=size=2000
+
+
+staffEndPoint=https://medunna.com/api/staff
