--- a/configuration.properties
+++ b/configuration.properties
@@ -34,7 +34,7 @@ appointment_endpoint=https://medunna.com/api/appointments
 appointment_getEndpoint=https://medunna.com/api/appointments?=size=2000
 
 room_getEndpoint=https://medunna.com/api/rooms/?=size=2000
-physian_getEndpoint=https://medunna.com/api/physicians/?=size=2000
+
 room_endpoint=https://medunna.com/api/rooms
 us016_roomgetendpont=https://medunna.com/api/rooms/228125
 
@@ -45,9 +45,9 @@ US018_Physician_get_request=https://medunna.com/api/physicians/214524
 patientEndpoint=https://medunna.com/api/patients/243691
 
 
-
-
-
+testItem_getEndpoint=https://medunna.com/api/c-test-items/?=size=2000
+testItem_endpoint=https://medunna.com/api/c-test-items
+testItem_get_testItem_request=https://medunna.com/api/c-test-items/250218
 
 
 
