--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,6 @@
 browser=chrome
 medunnaUrl=https://www.medunna.com
-
+medunnaUrl2=https://medunna.com
 adminUsername=team59medunna
 adminPassword=medunna2022.team59
 
