--- a/configuration.properties
+++ b/configuration.properties
@@ -40,7 +40,7 @@ us016_roomgetendpont=https://medunna.com/api/rooms/228125
 
 physician_getEndpoint=https://medunna.com/api/physicians
 physician_getEndpointSize=https://medunna.com/api/physicians?size=2000
-US018_Physician_get_request=https://medunna.com/api/physicians/214524
+US018_Physician_get_request=https://medunna.com/api/physicians/2051
 
 patientEndpoint=https://medunna.com/api/patients/243691
 
