--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,12 @@ adminPassword=medunna2022.team59
 
 staffUsername=StaffMe
 staffPassword=staffme2022
+
+anaSayfa=https://www.medunna.com
+ValidHastaUserName = ahmethasan
+ValidHastaUserPassword = 53Team53aa.
+ValidPhoneNumber = 4564561478
+!-- room_endpoint=https://medunna.com/api/rooms?=size=2000
+
+ValidAdminUserName = 53Team53
+ValidAdminPassword = 53Team53aa.
